[package]
name = "draw-your-47"
version = "0.0.0"
description = "A web ai drawing application backend"
authors = ["AptS-1547 <apts-1547@esaps.net>"]
edition = "2024"

# 优化配置
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
lto = false

[dependencies]
actix-service = "2.0.3"
actix-web = "4.13.0"
bloomfilter = "3.0.1"
color-eyre = "0.6.5"
colored = "3.1.1"
futures-util = "0.3.32"
moka = { version = "0.12.15", features = ["future"] }
num_cpus = "1.17.0"
once_cell = "1.21.4"
rustls = "0.23.37"
toml = "1.0.7"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "ansi", "json"] }
uuid = { version = "1.22.0", features = ["v4"] }
redis = { version = "1.1.0", features = ["tokio-comp", "tokio-rustls-comp"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "mysql", "chrono"] }
tokio = { version = "1.50.0", default-features = false, features = ["rt-multi-thread", "macros"] }
futures = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.10.0", default-features = false, features = ["std", "std_rng"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
